fix: increase the contrast between placeholder text and the background   (#219)
* Specify placholder color. Must set opacity to 1 to avoid transparancy set by default.

* Change placeholder colour in widget.

--- a/src/widget/widget.module.css
+++ b/src/widget/widget.module.css
@@ -109,6 +109,11 @@
   composes: input from search;
 }
 
+.search_input::placeholder {
+  color: var(--text-colors-secondary);
+  opacity: 1;
+}
+
 .search_inputLast {
   border-top-right-radius: 0.75rem;
   border-bottom-right-radius: 0.75rem;
